Refactor authentication and token management
- Removed the Windows batch script for Maven wrapper.
- Added Maven plugins for Checkstyle, SpotBugs, and PMD to enforce code quality checks.
- Simplified SecurityConfig by removing unused AuthenticationManager bean.
- Deleted RefreshTokenServiced class and replaced it with TokenPair for token management.
- Introduced custom exceptions for better error handling: BadRequestException, EmailAlreadyExistsException, InvalidCredentialsException, NotFoundException, UnauthorizedException, UserNotFoundException, and UsernameAlreadyExistsException.
- Updated AuthService to utilize new TokenPair and custom exceptions.
- Enhanced JwtService to manage token generation and validation more effectively.
- Modified UserService to throw custom exceptions instead of generic RuntimeExceptions.
- Commented out the Spring Boot test class to prevent context loading issues during tests.